--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="col-md-10">
                <h1 class="text-white display-4">Offcial Website VIII-B</h1>
                <p class="text-white">Selamat Datang Di Website Kami</p>
-               <a href="https://8bayspenmabanjarbaru.github.io/galleryclass/" class="btn btn-brand">Video Gallery</a>
+               <a href="#photo" class="btn btn-brand">Picture Class</a>
             </div>
          </div>
       </div>
