--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   <i class='bx bx-female'></i>
                </div>
                <h4 class="title-sm mt-4">Teacher</h4>
-               <p>Wahyu Malinda</p>
+               <p>Wahyu Widiyanti, SE</p>
             </div>
             <div class="col-lg-4 col-sm-6 p-4">
                <div class="icon-box">
