--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <i class='bx bx-list-ol'></i>
                </div>
                <h4 class="title-sm mt-4">Students</h4>
-               <p>31 Students 👩 : 16 | 👦 : 16 </p>
+               <p> 👩 : 16 | 👦 : 16 </p>
             </div>
             <div class="col-lg-4 col-sm-6 p-4">
                <div class="icon-box">
@@ -496,8 +496,8 @@
                   <p>Media Sosial Kelas Kami Ada Dibawah Ini</p>
                   <div class="social-icons">
                      <a href="https://discord.gg/r428KdGGTZ"><i class='bx bxl-discord-alt' ></i>
-                     <a href="https://jackgg12345.github.io/PortofolioDit/"><i class='bx bxs-user-badge'></i></a>
-                     <a href="https://instagram.com/8bayspenmabanjarbaru_?igshid=YmMyMTA2M2Y="><i class="bx bxl-instagram"></i></a>
+                     <a href="https://8braves-spenma.github.io/linktreeclass/"><i class='bx bxs-user-badge'></i></a>
+                     <a href="https://instagram.com/8braves_spenma?igshid=YmMyMTA2M2Y="><i class="bx bxl-instagram"></i></a>
                   </div>
                </div>
                <div class="col-md-2">
