--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
       </div>
       <div class="col-lg-4 col-sm-6">
          <div class="photo-item">
-               <img src="img/p5.jpg" alt="">
+               <img src="img/p11.jpg" alt="">
                <div class="photo-overlay">
                   <div>
                      <h3>Foto 8</h3>
-                     <h6>Coming Soon</h6>
+                     <h6>Kerja Kelompok Prakarya</h6>
                   </div>
                </div>
          </div>
